--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 yew = { version = "0.21.0", features = ["csr"] }
 yew-hooks = "0.3"
+rand = "0.8"
+rand_distr = "0.4"
+getrandom = { version = "0.3", features = ["wasm_js"] }
