--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ yew-hooks = "0.3"
 rand = "0.8"
 rand_distr = "0.4"
 getrandom = { version = "0.3", features = ["wasm_js"] }
+web-sys = { version = "0.3", features = ["HtmlInputElement"] }
